REAL-55 deleted ability to add images,fixed chat img,fixed chat scrollbar

--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -73,3 +73,8 @@ body::-webkit-scrollbar-track {
   background-color: var(--background-secondory);
   border-radius: 6px; /* Закругленные углы для трека */
 }
+
+
+.users-container::-webkit-scrollbar {
+  display: none;
+}
